# pediferrous

./: .gitignore  .release-please-manifest.json  Cargo.toml  README.md  release-please-config.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: rust-ci.yml
pdfgen/: CHANGELOG.md  Cargo.toml
pdfgen/src/: doc_builder.rs  lib.rs  macros.rs
pdfgen/src/document/: builder.rs  mod.rs  obj_id.rs
pdfgen/src/object/: mod.rs
pdfgen/src/types/: dictionary.rs  mod.rs  name.rs  pdf_writer.rs
pdfgen/src/types/hierarchy/: array.rs  boolean.rs  catalog.rs  cross_reference_table.rs  date.rs  dictionary.rs  file_spec.rs  function.rs  integer.rs  mod.rs  name.rs  number.rs  page.rs  page_tree.rs  rectangle.rs  stream.rs  string.rs  trailer.rs
pdfgen/src/types/hierarchy/content/: color.rs  content_stream.rs  image.rs  mod.rs  stream.rs  text.rs
pdfgen/src/types/hierarchy/content/color/: cmyk_value.rs  mod.rs
pdfgen/src/types/hierarchy/content/snapshots/: pdfgen__types__hierarchy__content__image__tests__sample_image.snap  pdfgen__types__hierarchy__content__text__tests__custom_text.snap  pdfgen__types__hierarchy__content__text__tests__default_text.snap
pdfgen/src/types/hierarchy/primitives/: array.rs  font.rs  identifier.rs  mod.rs  name.rs  obj_id.rs  obj_ref.rs  object.rs  rectangle.rs  resources.rs  string.rs  text.rs  unit.rs
pdfgen/src/types/hierarchy/primitives/snapshots/: pdfgen__types__hierarchy__primitives__font__tests__font_object.snap  pdfgen__types__hierarchy__primitives__text__tests__custom_text.snap  pdfgen__types__hierarchy__primitives__text__tests__default_text.snap
pdfgen/tests/: ergonomics.rs  gen_test.rs
pdfgen/tests/macros/: mod.rs
pdfgen_macros/: CHANGELOG.md  Cargo.toml
pdfgen_macros/src/: identifier.rs  lib.rs  name.rs  write_chain.rs
pediferrous/: CHANGELOG.md  Cargo.toml
pediferrous/src/: lib.rs  main.rs
src/: lib.rs
