[workspace]
members = [
    "pdfgen",
    "pediferrous",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nadir Fejzić"]
description = "PDF Generation and rendering libraries written in Rust."
repository = "https://github.com/nfejzic/pediferrous"
homepage = "https://github.com/nfejzic/pediferrous"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
