[workspace]
members = [
    "pdfgen", "pdfgen_macros",
    "pediferrous",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nadir Fejzić <nadirfejzo@gmail.com>", "Kasim Fejzić <kasimfejzo@gmail.com>"]
description = "PDF Generation and rendering libraries written in Rust."
repository = "https://github.com/pediferrous/pediferrous"
homepage = "https://github.com/pediferrous/pediferrous"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
