[package]
name = "pdfgen"
version = "0.1.0"
edition = "2021"
authors = ["Nadir Fejzic <nadirfejzo@gmail.com>", "Kasim Fejzic <kasimfejzo@gmail.com>"]
description = "PDF rendering library."
repository = "https://github.com/nfejzic/pediferrous"
license = "Apache-2.0"

[dependencies]

[dev-dependencies]
insta = "1.41.1"
