[package]
name = "pdfgen"
version = "0.3.0"
description = "PDF rendering library."
edition.workspace = true 
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
md5 = "0.7.0"
hex = "0.4.3"
image = "0.25.5"
pdfgen_macros = {path = "../pdfgen_macros"}
thiserror = "2.0.12"

[dev-dependencies]
insta = "1.41.1"
pretty_assertions = "1.4.1"
