[package]
name = "pediferrous"
version = "0.1.0"
edition = "2021"
authors = ["Nadir Fejzic <nadirfejzo@gmail.com>"]
description = "PDF rendering library."
repository = "https://github.com/nfejzic/pediferrous"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
